<resources>
    <string name="app_name">PokeApp</string>

    <string name="title_name1">POKÉ</string>
    <string name="title_name2">APP</string>

    <string name="title_pokedex1">What Pokémon</string>
    <string name="title_pokedex2">are you looking for?</string>
    <string name="hint_pokedex1">Search for…</string>

    <string name="default_tag">Unknown</string>
    <string name="default_id">#000</string>

    <string name="info_Type">Type</string>
    <string name="info_Height">Height</string>
    <string name="info_Weight">Weight</string>
    <string name="info_Abilities">Abilities</string>
    <string name="info_Local">Local</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>