<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:id="@+id/displayFrame"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:src="@drawable/ic_body_pokemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_extrabold"
        android:text="@string/default_tag"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/pokemonImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_extrabold"
        android:text="@string/default_id"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/pokemonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pokemonName"
        app:layout_constraintTop_toTopOf="@+id/pokemonName"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/pokemonImg"
        android:layout_width="176dp"
        android:layout_height="185dp"
        android:layout_marginBottom="8dp"

        android:src="@drawable/bg_mewtwo"
        app:layout_constraintBottom_toTopOf="@+id/bgOptionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <ImageView
        android:id="@+id/bgOptionBar"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:layout_marginBottom="52dp"
        android:alpha="0.05"
        android:src="@drawable/ic_bar"
        app:layout_constraintBottom_toTopOf="@+id/tagType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tagAbilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/lexend_light"
        android:text="@string/info_Abilities"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tagLocal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tagWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lexend_light"
        android:text="@string/info_Weight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tagAbilities"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tagType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lexend_light"
        android:text="@string/info_Type"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tagHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tagHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lexend_light"
        android:text="@string/info_Height"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tagWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tagLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="124dp"
        android:fontFamily="@font/lexend_light"
        android:text="@string/info_Local"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pokemonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        android:text="@string/default_tag"
        app:layout_constraintBottom_toBottomOf="@+id/tagType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/tagType"
        app:layout_constraintTop_toTopOf="@+id/tagType"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pokemonHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        android:text="@string/default_tag"
        app:layout_constraintBottom_toBottomOf="@+id/tagHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toEndOf="@+id/tagHeight"
        app:layout_constraintTop_toTopOf="@+id/tagHeight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pokemonWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        android:text="@string/default_tag"
        app:layout_constraintBottom_toBottomOf="@+id/tagWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/tagWeight"
        app:layout_constraintTop_toTopOf="@+id/tagWeight"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAbilities"
        android:layout_width="252dp"
        android:layout_height="101dp"
        android:layout_marginStart="43dp"
        app:layout_constraintBottom_toBottomOf="@+id/tagAbilities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tagAbilities"
        app:layout_constraintTop_toTopOf="@+id/tagAbilities"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_abilities"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLocal"
        android:layout_width="252dp"
        android:layout_height="101dp"
        android:layout_marginStart="43dp"
        app:layout_constraintBottom_toBottomOf="@+id/tagLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tagLocal"
        app:layout_constraintTop_toTopOf="@+id/tagLocal"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_locations"/>

</androidx.constraintlayout.widget.ConstraintLayout>